[package]
name = "bbp-now"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.3.0"
markdown = "1.0.0-alpha.21"
serde = { version = "1", features = ["derive"] }
